--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,28 +1,62 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    # Regras gerais recomendadas
+    avoid_print_statements: true
+    unnecessary_new: true
+    unnecessary_const: true
+    unnecessary_this: true
+    prefer_final_fields: true
+    prefer_const_constructors: true
+    prefer_const_literals_to_create_immutables: true
+    prefer_collection_literals: true
+    prefer_spread_collections: true
+    prefer_arrows: true
+    prefer_if_elements_where_applicable: true
+    prefer_for_elements_where_applicable: true
+    prefer_foreach_elements_where_applicable: true
+    prefer_void_returning_functions_where_applicable: true
+    prefer_null_aware_operators: true
+    prefer_contains: true
+    prefer_equal_for_default_values: true
+    prefer_is_not_empty: true
+    prefer_iterable_whereType: true
+    prefer_single_quotes: true
+    prefer_double_quotes: false
+    sort_pub_dependencies: true
+    sort_child_properties_last: true
+    flutter_style_todos: true
+    lines_longer_than_80_chars: error
+    library_private_types_in_public_api: error
+    file_names: true
+    directives_ordering: true
+    no_leading_underscores_for_library_prefixes: true
+    no_leading_underscores_for_local_identifiers: true
+    avoid_as: true
+    avoid_catching_errors: true
+    avoid_returning_null_for_future: true
+    avoid_slow_async_io: true
+    avoid_web_libraries_in_flutter: true
+    prefer_mixin: true
+    prefer_void_to_null: true
+    unnecessary_type_check: true
+    unnecessary_nullable_for_final_variable_declarations: true
+    unnecessary_overrides: true
+    unnecessary_await_in_return: true
+    unnecessary_brace_in_string_interps: true
+    unnecessary_late: true
+    unnecessary_non_null_assertion: true
+    unnecessary_raw_strings: true
+    unnecessary_string_escapes: true
+    unnecessary_string_interpolations: true
+    use_full_hex_values_for_flutter_colors: true
+    use_if_null_to_convert_nulls_to_bools: true
+    use_key_in_widget_constructors: true
+    use_named_constants: true
+    use_setters_to_change_an_objects_state: true
+    use_super_parameters: true
+    use_text_buttons: true
+    use_to_and_as_if_applicable: true
+    valid_regexps: true
+    void_checks: true
